src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Fuera_de_Politica__c</fullName>
        <description>Detalle de la no venta por políticas de la empresa</description>
        <label>Fuera de Política</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AUTOFINANCIAMIENTO</fullName>
                </value>
                <value>
                    <fullName>AUTO SINIESTRADO</fullName>
                </value>
                <value>
                    <fullName>SIN CORREO ELECTRÓNICO PARA COTIZAR</fullName>
                </value>
                <value>
                    <fullName>OTROS FUERA DE POLITICA</fullName>
                </value>
                <value>
                    <fullName>USO CHOFER PRIVADO</fullName>
                </value>
                <value>
                    <fullName>MODELO</fullName>
                </value>
                <value>
                    <fullName>TAXI</fullName>
                </value>
                <value>
                    <fullName>VEHICULOS 3 TONELADAS Y MÁS</fullName>
                </value>
                <value>
                    <fullName>USO COMERCIAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GanaDOR_ca__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GanaDOR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <description>ID de campaña proveniente de Lead.</description>
        <label>GCLID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeneroAsegurado__c</fullName>
        <description>Género del asegurado.</description>
        <label>Género Asegurado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Femenino</fullName>
                </value>
                <value>
                    <fullName>Masculíno</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GeneroCliente__c</fullName>
        <label>Genero Contratante</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FEMENINO</fullName>
                </value>
                <value>
                    <fullName>MASCULINO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grupo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grupo</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <errorMessage>Registro que buscas no es un grupo.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Grupo</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Grupo PyME</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Family Group BPyP, Cliente BPyP</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Oportunidades componentes del grupo</relationshipLabel>
        <relationshipName>Oportunidades_Grupo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HI_ls_MotivoDescarte__c</fullName>
        <description>Lista de selección para descartar en Banca Hipotecaria Individual</description>
        <label>Motivo de descarte</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Buró comercial / interno</fullName>
                </value>
                <value>
                    <fullName>Contacto cercano con otro banco</fullName>
                </value>
                <value>
                    <fullName>Contingencias del cliente</fullName>
                </value>
                <value>
                    <fullName>Dictamen jurídico</fullName>
                </value>
                <value>
                    <fullName>Precio</fullName>
                </value>
                <value>
                    <fullName>Producto</fullName>
                </value>
                <value>
                    <fullName>Regulatorio</fullName>
                </value>
                <value>
                    <fullName>Tema técnico</fullName>
                </value>
                <value>
                    <fullName>Tiempos de respuesta</fullName>
                </value>
                <value>
                    <fullName>Declinado por riesgos</fullName>
                </value>
                <value>
                    <fullName>Dictamen legal no favorable</fullName>
                </value>
                <value>
                    <fullName>Dictamen técnico no favorable</fullName>
                </value>
                <value>
                    <fullName>No hay acuerdo en condiciones de crédito</fullName>
                </value>
                <value>
                    <fullName>Precio / Sobretasa</fullName>
                </value>
                <value>
                    <fullName>Se fue con otro banco</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
                <value>
                    <fullName>No fue aprobado por Riesgos</fullName>
                </value>
                <value>
                    <fullName>Cliente no posee las garantías adecuadas</fullName>
                </value>
                <value>
                    <fullName>No aprobado por notaría</fullName>
                </value>
                <value>
                    <fullName>CSC no autorizó la liberación de recursos</fullName>
                </value>
                <value>
                    <fullName>Requerimientos del Seguro no satisfechos</fullName>
                </value>
                <value>
                    <fullName>Expediente incompleto</fullName>
                </value>
                <value>
                    <fullName>Cliente rechaza por demora en el proceso (autorización de Dirección General)</fullName>
                </value>
                <value>
                    <fullName>Cliente rechaza por demora en el proceso (otros factores)</fullName>
                </value>
                <value>
                    <fullName>Oferta no fue atractiva para el cliente</fullName>
                </value>
                <value>
                    <fullName>Otros factores (campo abierto)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HI_tx_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Estado donde se encuentra localizado el desarrollo</inlineHelpText>
        <label>Estado del Desarrollo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomoclaveAsegurado__c</fullName>
        <label>Homoclave Asegurado</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomoclaveContratante__c</fullName>
        <label>Homoclave Contratante</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hora_de_contacto_15_min__c</fullName>
        <description>Hora en la que el asesor toma la cotización.</description>
        <label>Hora de contacto 15 min</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hora_de_contacto_30_min__c</fullName>
        <description>Hora en la que el asesor toma la cotización.</description>
        <label>Hora de contacto 30 min</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hora_de_contacto_45_min__c</fullName>
        <description>Hora en la que el asesor toma la cotización.</description>
        <label>Hora de contacto 45 min</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Horaaproximadaenvio__c</fullName>
        <description>Hora aproximada cuando se envía a CTI.</description>
        <label>Hora aproximada de envío</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HoraCreacion__c</fullName>
        <formula>CreatedDate</formula>
        <label>Hora de Creación</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Horario_de_Contacto__c</fullName>
        <description>Campo para determinar si el horario de contacto es  Matutino o vespertino</description>
        <label>Horario de Contacto</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HorasTranscurridasVerificacion__c</fullName>
        <description>iempo transcurrido desde la activación del campo caso verificación hasta ahora</description>
        <formula>NOW() - FechaVerificacion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Horas transcurridas de verificación</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Horaultimamodificacion__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hora de última modificación</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IDCotizacion__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID Cotización</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_recurrentes__c</fullName>
        <inlineHelpText>Ingresos no Financieros</inlineHelpText>
        <label>INF recurrentes</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invitacion_cool_drive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo que permite conocer si se le enviará la invitación de cool drive al cliente</description>
        <label>Invitación cool drive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>laPersonaQueAdquiereLaPolizaEsElContrata__c</fullName>
        <description>Evaluación de información del cliente.</description>
        <label>¿Es contratante?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Llamada_Realizada__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Si la llamada fue realizada con éxito.</description>
        <label>Llamada Realizada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>  
    <fields>
        <fullName>MX_SB_VTS_ContadorLlamadasEfectivas__c</fullName>
        <description>Valor numero contador llamadas efectivas</description>
        <formula>IF( ISBLANK( MX_SB_VTS_Llamadas_Efectivas__c) , 0, MX_SB_VTS_Llamadas_Efectivas__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contacto Efectivo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_ContadorLlamadasNoEfectivas__c</fullName>
        <description>Valor numero contador llamadas no efectivas</description>
        <formula>IF( ISBLANK( MX_SB_VTS_Llamadas_No_Efectivas__c) , 0, MX_SB_VTS_Llamadas_No_Efectivas__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contacto No Efectivo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_ContadorLlamadasTotales__c</fullName>
        <label>Contador Llamadas Totales</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_ContadorLlamadas__c</fullName>
        <description>Valor Contador remarcado en número</description>
        <formula>IF(  ISBLANK( MX_SB_VTS_ContadorRemarcado__c) , 0, MX_SB_VTS_ContadorRemarcado__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Toques</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_ContadorRemarcado__c</fullName>
        <description>Contador total llamadas por el proveedor de call center</description>
        <label>Contador Llamadas Toques</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_LlamadasTotales__c</fullName>
        <formula>IF( ISBLANK( MX_SB_VTS_ContadorLlamadasTotales__c) , 0, MX_SB_VTS_ContadorLlamadasTotales__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Llamadas totales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Llamadas_Efectivas__c</fullName>
        <description>Contador de llamadas efectivas al cliente</description>
        <label>Contador llamadas efectivas</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Llamadas_No_Efectivas__c</fullName>
        <description>contador de llamadas no efectivas</description>
        <label>Contador Llamadas No Efectivas</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_LookActivity__c</fullName>
        <description>Campo para referenciar la Tarea de llamada activa</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Tarea Activa</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Numero_de_Llamadas__c</fullName>
        <label>Numero de llamadas</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_OppCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Caso</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Oportunidades (Caso)</relationshipLabel>
        <relationshipName>Oportunidades1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Tipificacion_LV1__c</fullName>
        <label>¿Contacto?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contacto</fullName>
                </value>
                <value>
                    <fullName>No Contacto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Tipificacion_LV2__c</fullName>
        <label>¿Contacto Efectivo?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MX_SB_VTS_Tipificacion_LV1__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contacto Efectivo</fullName>
                </value>
                <value>
                    <fullName>Contacto No Efectivo</fullName>
                </value>
                <value>
                    <fullName>No Contacto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Tipificacion_LV3__c</fullName>
        <label>¿Interesado?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MX_SB_VTS_Tipificacion_LV2__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Interesado</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
                <value>
                    <fullName>No Interesado</fullName>
                </value>
                <value>
                    <fullName>No Interesado (CNE)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Uso_de_Cup_n__c</fullName>
        <defaultValue>false</defaultValue>
        <description>El campo que almacena si se usó o no un cupón</description>
        <label>Uso de Cupón</label>
        <type>Checkbox</type>
    </fields>  
    <fields>
        <fullName>Marca__c</fullName>
        <description>Marca del vehículo.</description>
        <label>Marca</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mercado_de_dinero__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mercado de dinero</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MesAnioSkypPayment__c</fullName>
        <description>Este campo toma el mes y el año de la fecha de envío de correo para Skip Payment</description>
        <formula>CASE(MONTH( EnviarCorreoSkipPayment__c), 1, &quot;Enero&quot;, 2, &quot;Febrero&quot;, 3, &quot;Marzo&quot;, 4, &quot;Abril&quot;, 5, &quot;Mayo&quot;, 6, &quot;Junio&quot;, 7, &quot;Julio&quot;, 8, &quot;Agosto&quot;, 9, &quot;Septiembre&quot;, 10, &quot;Octubre&quot;, 11, &quot;Noviembre&quot;, &quot;Diciembre&quot;)&amp; &quot; &quot; &amp; &quot;de&quot; &amp; &quot; &quot; &amp;TEXT(YEAR(EnviarCorreoSkipPayment__c))</formula>
        <label>Mes y año de skip payment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mesessinintereses__c</fullName>
        <description>Información de la cuenta bancaria.</description>
        <label>Meses sin interéses</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Forma_de_pago__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Metodopago__c</fullName>
        <label>Método de pago</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metrica_de_mejora_al_cliente__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Métrica de mejora al cliente</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Modelo__c</fullName>
        <description>Modelo del vehículo.</description>
        <label>Modelo</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modificacionespoliza__c</fullName>
        <label>Modificaciones póliza</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Moneda__c</fullName>
        <label>Moneda</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MXP</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>Pesos</fullName>
                </value>
                <value>
                    <fullName>DLL</fullName>
                </value>
                <value>
                    <fullName>Otras divisas</fullName>
                </value>
                <value>
                    <fullName>EURO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monto_de_la_oportunidad__c</fullName>
        <description>Testamentario: Monto de la línea a establecerle al clienteMedio de pago Cesión de Derechos: Monto a Financiar del Contrato. Pensiones: Monto del Fideicomiso. Fondo de Ahorro: Monto del patrimonio captado. Medio de pago Std. (GL): Monto a Financiar del Contrato</description>
        <inlineHelpText>Testamentario:Monto de la línea a establecerle al clienteMedio de pago Cesión de Derechos:Monto a Financiar del Contrato. Pensiones:Monto del Fideicomiso. Fondo de Ahorro:Monto del patrimonio captado. Medio de pago Std. (GL):Monto a Financiar del Contro</inlineHelpText>
        <label>Monto de la oportunidad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monto_de_la_oportunidad_en_pesos__c</fullName>
        <formula>IF( NOT (ISPICKVAL( Moneda__c , &quot;MXP&quot;)) , Monto_de_la_oportunidad__c * Tipo_de_cambio__c , Monto_de_la_oportunidad__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monto de la oportunidad en pesos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monto_de_la_oportunidad_Inv__c</fullName>
        <description>Fondos corto plazo, Fondos mediano plazo, Fondos largo plazo y Cobertura/Renta variable</description>
        <inlineHelpText>Monto que el cliente desea invertir en Fondos de Inversión</inlineHelpText>
        <label>Monto de la oportunidad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monto_Promedio__c</fullName>
        <description>PLAZO: Monto que el cliente desea invertir en Fondos de InversiónMDD: Monto que el cliente desea invertir en PRLV</description>
        <inlineHelpText>PLAZO: Monto que el cliente desea invertir en Fondos de InversiónMDD: Monto que el cliente desea invertir en PRLV</inlineHelpText>
        <label>Monto Promedio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Motivo_de_perdida__c</fullName>
        <inlineHelpText>Depende de la Etapa</inlineHelpText>
        <label>Motivo de descarte</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Buró comercial / interno</fullName>
                </value>
                <value>
                    <fullName>Cliente no entrega información mínima</fullName>
                </value>
                <value>
                    <fullName>Condición del comité</fullName>
                </value>
                <value>
                    <fullName>Condición del contrato</fullName>
                </value>
                <value>
                    <fullName>Contacto cercano con otro banco</fullName>
                </value>
                <value>
                    <fullName>Contingencias del cliente</fullName>
                </value>
                <value>
                    <fullName>Crédito</fullName>
                </value>
                <value>
                    <fullName>Declinada sin opción</fullName>
                </value>
                <value>
                    <fullName>Declinado por riesgos</fullName>
                </value>
                <value>
                    <fullName>Dictamen jurídico</fullName>
                </value>
                <value>
                    <fullName>Dictamen legal no favorable</fullName>
                </value>
                <value>
                    <fullName>Dictamen técnico no favorable</fullName>
                </value>
                <value>
                    <fullName>No hay acuerdo en condiciones de crédito</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
                <value>
                    <fullName>Precio</fullName>
                </value>
                <value>
                    <fullName>Precio / Sobretasa</fullName>
                </value>
                <value>
                    <fullName>Producto</fullName>
                </value>
                <value>
                    <fullName>Rechazada por cliente</fullName>
                </value>
                <value>
                    <fullName>Regulatorio</fullName>
                </value>
                <value>
                    <fullName>Riesgo Legal</fullName>
                </value>
                <value>
                    <fullName>Riesgo Operacional</fullName>
                </value>
                <value>
                    <fullName>Riesgo Reputacional</fullName>
                </value>
                <value>
                    <fullName>Se fue con otro banco</fullName>
                </value>
                <value>
                    <fullName>Tema técnico</fullName>
                </value>
                <value>
                    <fullName>Tiempo de respuesta</fullName>
                </value>
                <value>
                    <fullName>Tiempos de respuesta</fullName>
                </value>
                <value>
                    <fullName>No fue aprobado por Riesgos</fullName>
                </value>
                <value>
                    <fullName>Cliente no posee las garantías adecuadas</fullName>
                </value>
                <value>
                    <fullName>No aprobado por notaría</fullName>
                </value>
                <value>
                    <fullName>CSC no autorizó la liberación de recursos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivo_interes__c</fullName>
        <description>Motivo de interes.</description>
        <label>Motivo de interes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Motivodenocontacto__c</fullName>
        <label>Motivo de no contacto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contestadora</fullName>
                </value>
                <value>
                    <fullName>Línea ocupada</fullName>
                </value>
                <value>
                    <fullName>Mala calidad de audio</fullName>
                </value>
                <value>
                    <fullName>No contesta</fullName>
                </value>
                <value>
                    <fullName>Teléfono suspendido</fullName>
                </value>
                <value>
                    <fullName>Teléfono no existe</fullName>
                </value>
                <value>
                    <fullName>Fuera del área de servicio</fullName>
                </value>
                <value>
                    <fullName>Fuera de servicio (Fijo)</fullName>
                </value>
                <value>
                    <fullName>Buzón de voz</fullName>
                </value>
                <value>
                    <fullName>Se corta llamada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivoelegibilidad__c</fullName>
        <label>Motivo de no elegibilidad</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Motivo uso comercial</fullName>
                </value>
                <value>
                    <fullName>Uso de taxi</fullName>
                </value>
                <value>
                    <fullName>Mayor a 3.5 toneladas</fullName>
                </value>
                <value>
                    <fullName>Antiguedad</fullName>
                </value>
                <value>
                    <fullName>Fronterizo / legalizado</fullName>
                </value>
                <value>
                    <fullName>Salvamento / Siniestrado</fullName>
                </value>
                <value>
                    <fullName>Auto fuera de base</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivosnoventa__c</fullName>
        <description>Motivo de no venta para cotización.</description>
        <label>Motivos de no venta</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cliente molesto</fullName>
                </value>
                <value>
                    <fullName>Cliente no tiene tiempo</fullName>
                </value>
                <value>
                    <fullName>Cliente cuelga</fullName>
                </value>
                <value>
                    <fullName>No cumple políticas de contratación</fullName>
                </value>
                <value>
                    <fullName>No permite explicación de producto</fullName>
                </value>
                <value>
                    <fullName>Se cortó llamada</fullName>
                </value>
                <value>
                    <fullName>Cliente prefiere ir a sucursal</fullName>
                </value>
                <value>
                    <fullName>Cliente no tiene trabajo</fullName>
                </value>
                <value>
                    <fullName>Cliente lo va a pensar</fullName>
                </value>
                <value>
                    <fullName>Agendar</fullName>
                </value>
                <value>
                    <fullName>Otro idioma</fullName>
                </value>
                <value>
                    <fullName>Cuenta con producto similar BBVA</fullName>
                </value>
                <value>
                    <fullName>Cuenta con producto similar otro banco</fullName>
                </value>
                <value>
                    <fullName>Desconfianza del medio de comunicación</fullName>
                </value>
                <value>
                    <fullName>Desconfianza del producto ofertado</fullName>
                </value>
                <value>
                    <fullName>Desconfianza por llamada reciente</fullName>
                </value>
                <value>
                    <fullName>Economía personal</fullName>
                </value>
                <value>
                    <fullName>Mala experiencia BBVA</fullName>
                </value>
                <value>
                    <fullName>No le gustan los seguros</fullName>
                </value>
                <value>
                    <fullName>No utiliza TDC / TDD</fullName>
                </value>
                <value>
                    <fullName>Precio alto del producto</fullName>
                </value>
                <value>
                    <fullName>Prefiere otros productos</fullName>
                </value>
                <value>
                    <fullName>Producto no cubre expectativas</fullName>
                </value>
                <value>
                    <fullName>Requiere mayor suma asegurada</fullName>
                </value>
                <value>
                    <fullName>TDC / TDD robada o extraviada</fullName>
                </value>
                <value>
                    <fullName>Va a cancelar cuenta</fullName>
                </value>
                <value>
                    <fullName>Bloquear Sanas Prácticas</fullName>
                </value>
                <value>
                    <fullName>(Asistido) Dificil contratar mediante Tmkt</fullName>
                </value>
                <value>
                    <fullName>(Asistido) Dificil contratar mediante App</fullName>
                </value>
                <value>
                    <fullName>Tarjeta rechazada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MotivoVenta__c</fullName>
        <formula>And(If(ISPICKVAL( Reason__c , &quot;Venta&quot;), True, False))</formula>
        <label>Motivo X Venta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MotivoXVentaPreEmision__c</fullName>
        <formula>And(If(ISPICKVAL( Reason__c , &quot;Venta Pre emision&quot;),True, False))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Motivo X Venta Pre Emision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_BPP_Bypass_VR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Validación que impide los cambios de etapa manuales en la oportunidad.</description>
        <label>Bypass VR</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>